concord_macros/tests/trybuild/fail/codegen/reserved_nocontent_arity_two.rs
use concord_macros::api;

api! {
    client ReservedNoContentArityTwoApi {
        base "https://example.com"
    }

    GET Ping
        path ["ping"]
        -> NoContent<A, B>
}

fn main() {}
