concord_macros/tests/trybuild/fail/codegen/reserved_nocontent_arity_two.stderr
error: reserved endpoint I/O family `NoContent` does not take type arguments
  --> tests/trybuild/fail/codegen/reserved_nocontent_arity_two.rs:10:12
   |
10 |         -> NoContent<A, B>
   |            ^^^^^^^^^^^^^^^
